[package]
name = "sass-rocket-fairing"
version = "0.2.0"
edition = "2018"
license = "MIT"
authors = ["SyedAhkam smahkam57@gmail.com"]
description = "A rocket fairing to compile sass files automagically on change ✨"
readme = "README.md"
repository = "https://github.com/SyedAhkam/sass-rocket-fairing"
categories = ["development-tools", "web-programming"]
keywords = ["rocket", "sass", "fairing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rsass = "0.25.2"
normpath = "0.3.0"
walkdir = "2.3.2"
notify = "4.0.17"